[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'sunrpc'
version = '1.1.0'
authors = [ { name='Tobias Neitzel (@qtc_de)' }, ]
description = 'sunrpc implements remote procedure calls according to RFC1057'
readme = 'README.md'
license = { file='LICENSE' }
requires-python = '>=3.9'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
]

[project.urls]
'Homepage' = 'https://github.com/usdAG/sunrpc'
'Bug Tracker' = 'https://github.com/usdAG/sunrpc/issues'
